crates/papyrus_storage/src/serialization/snapshots/papyrus_storage__serialization__serializers_test__hints_regression_hint_490.snap
---
source: crates/papyrus_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 1
- 234
- 1
- 14
- 0
- 0
- 2
- 0
- 0
- 255
- 255
- 0
- 0
- 216
- 255
- 0
- 0
- 0

